Implementacion de las pantallas y rolemanage